--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asteroid-impact-spa",
+  "name": "AsteroidFever-Client",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://profivankov.github.io/AsteroidFever-Client",
